# pdf_bridge_app

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/pdf_bridge_app/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: app.dart  rust_init.dart
lib/src/features/pdf/controller/: pdf_controller.dart
lib/src/features/pdf/models/: pdf_form_data.dart  pdf_generation_state.dart
lib/src/features/pdf/service/: file_open_service.dart  file_path_service.dart  pdf_service.dart
lib/src/features/pdf/ui/: pdf_home_page.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  rust_init.dart
lib/src/rust/api/: pdf_api.dart
lib/src/rust/domain/: models.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  build_android.sh  build_linux.sh
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  pdf_api.rs
rust/src/domain/: models.rs
rust/src/error/: mod.rs
rust/src/pdf/: generator.rs  layout.rs  mod.rs  writer.rs
test/: widget_test.dart
