[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
serde = { version = "1.0.228", features = ["derive"] }
printpdf = "0.9.1"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "macros"] }
