[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
serde = { version = "1.0.228", features = ["derive"] }
lopdf = "0.40.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "macros"] }

[build-dependencies]
flutter_rust_bridge_codegen = "2"
